# python-bundler

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bundler.py  launcher.c  launcher.cpp  main.cpp  vcpkg.json
cmake/: release-package.py
scripts/: dist.py  release-package.py
test-app/: deps.json  lib.py  main.py
